[package]
name = "montociel"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render", "bevy_gltf", "png"]}
bevy_rapier2d = "*"
rand = "0.8"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}

